feat: added budget and ability to buy/sell transactions

--- a/src/web-ui/src/index.html
+++ b/src/web-ui/src/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css"
+    />
   </head>
   <body
     class="dark:bg-[#1a1b23] bg-neutral-100 text-white min-h-screen overflow-y-auto"
@@ -177,6 +181,7 @@
 
           <!-- Submit Button -->
           <button
+            id="transaction-form-submit"
             type="submit"
             class="bg-emerald-500 hover:bg-emerald-600 transition rounded-2xl w-full py-4 font-bold text-lg"
           >
