feat: added transaction widgets & Idempotency Endpoint Filter

--- a/src/web-ui/src/index.html
+++ b/src/web-ui/src/index.html
@@ -349,12 +349,14 @@
 
         <div class="pt-20 flex items-center justify-between">
           <button
+            id="transactions-previous-button"
             class="flex items-center space-x-2 dark:bg-[#292B36] bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md text-gray-300 dark:hover:bg-[#2C2E39] transition"
           >
             Previous
           </button>
           <p class="text-gray-300 px-4 py-2">1 of 10</p>
           <button
+            id="transactions-next-button"
             class="flex items-center space-x-2 dark:bg-[#292B36] bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md text-gray-300 dark:hover:bg-[#2C2E39] transition"
           >
             Next
