feat: added auditlogs

--- a/src/web-ui/src/index.html
+++ b/src/web-ui/src/index.html
@@ -96,7 +96,7 @@
       <!-- Modal -->
       <div
         id="modal"
-        class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center w-full"
+        class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center w-full z-50"
       >
         <form
           class="p-6 rounded-xl shadow-lg w-[450px] bg-[#23242f] text-white"
@@ -377,7 +377,7 @@
           >
             Previous
           </button>
-          <p class="text-gray-300 px-4 py-2">1 of 10</p>
+          <p id="pagination-info" class="text-gray-300 px-4 py-2">1 of 10</p>
           <button
             id="transactions-next-button"
             class="flex items-center space-x-2 dark:bg-[#292B36] bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md text-gray-300 dark:hover:bg-[#2C2E39] transition"
