feat: redesigned front end UI

--- a/src/web-ui/src/index.html
+++ b/src/web-ui/src/index.html
@@ -18,199 +18,155 @@
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     />
   </head>
-  <body
-    class="dark:bg-[#1a1b23] bg-neutral-100 text-white min-h-screen overflow-y-auto"
-  >
+  <body class="bg-white dark:bg-[#242423]">
     <div
-      class="bg-gray-100 dark:bg-[#343a40] w-full h-20 flex items-center justify-center transition-colors"
+      id="modal"
+      class="hidden fixed inset-0 bg-black/50 justify-center items-center w-full z-50"
     >
-      <!-- Search Bar -->
-      <div class="search-container relative">
-        <div
-          class="rounded-md w-[400px] bg-white dark:bg-[#101114] flex items-center px-4 py-2 shadow-md transition-colors"
-        >
-          <svg
-            width="24px"
-            height="24px"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
+      <form
+        class="p-6 rounded-xl shadow-lg w-[450px] dark:bg-neutral-900 bg-white text-black dark:text-white"
+        id="transaction-form"
+      >
+        <div class="flex items-center justify-between mb-4">
+          <h2
+            id="modal-title"
+            class="text-lg font-bold text-black dark:text-white"
           >
-            <path
-              d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
-              stroke="#9CA3AF"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-          <input
-            id="search-input"
-            placeholder="Search"
-            class="bg-transparent text-gray-800 dark:text-gray-300 placeholder-gray-400 dark:placeholder-gray-500 focus:outline-none w-full ml-2"
-          />
+            Place Order
+          </h2>
+          <button
+            type="button"
+            id="close-modal"
+            class="bg-[#2c2d39] hover:bg-[#1a1b26] opacity-75 transition text-white px-4 py-2 rounded-xl"
+          >
+            X
+          </button>
         </div>
 
-        <!-- Search Results Dropdown -->
         <div
-          id="search-results"
-          class="absolute bg-white dark:bg-[#1a1b1f] mt-2 rounded-md shadow-lg hidden transition-colors"
-          style="width: 400px"
-        ></div>
-      </div>
-
-      <!-- Logout Button & Theme Toggle -->
-      <div class="absolute right-4 flex items-center space-x-4">
-        <!-- Logout Button -->
-        <button
-          id="logout-button"
-          class="flex items-center justify-center group"
+          class="flex items-center justify-center mb-6 space-x-1 p-1.5 rounded-xl dark:bg-[#2c2d39] bg-white"
         >
-          <span
-            class="mr-2 font-semibold text-gray-800 dark:text-white group-hover:text-gray-600 dark:group-hover:text-neutral-200 transition"
-            >Logout</span
-          >
-          <svg
-            class="size-6 text-gray-800 dark:text-white group-hover:text-gray-600 dark:group-hover:text-neutral-200 transition"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            fill="currentColor"
-            viewBox="0 0 24 24"
-          >
-            <path d="M14 19V5h4a1 1 0 0 1 1 1v11h1a1 1 0 0 1 0 2h-6Z" />
-            <path
-              fill-rule="evenodd"
-              d="M12 4.571a1 1 0 0 0-1.275-.961l-5 1.428A1 1 0 0 0 5 6v11H4a1 1 0 0 0 0 2h1.86l4.865 1.39A1 1 0 0 0 12 19.43V4.57ZM10 11a1 1 0 0 1 1 1v.5a1 1 0 0 1-2 0V12a1 1 0 0 1 1-1Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </button>
-      </div>
-
-      <!-- Modal -->
-      <div
-        id="modal"
-        class="hidden fixed inset-0 bg-black/50 justify-center items-center w-full z-50"
-      >
-        <form
-          class="p-6 rounded-xl shadow-lg w-[450px] bg-[#23242f] text-white"
-          id="transaction-form"
-        >
-          <!-- Header -->
-          <div class="flex items-center justify-between mb-4">
-            <h2 id="modal-title" class="text-lg font-bold">Place Order</h2>
-            <button
-              type="button"
-              id="close-modal"
-              class="bg-[#2c2d39] hover:bg-[#1a1b26] opacity-75 transition text-white px-4 py-2 rounded-xl"
-            >
-              X
-            </button>
-          </div>
-
-          <!-- Buy/Sell Toggle -->
-          <div
-            class="flex items-center justify-center mb-6 space-x-1 p-1.5 rounded-xl bg-[#2c2d39]"
-          >
-            <button
-              type="button"
-              id="buy-button"
-              class="rounded-xl bg-emerald-500 hover:bg-emerald-500 w-full py-2 font-bold transition"
-            >
-              Buy
-            </button>
-            <button
-              type="button"
-              id="sell-button"
-              class="rounded-xl bg-[#2c2d39] hover:bg-rose-500 w-full py-2 font-bold transition"
-            >
-              Sell
-            </button>
-          </div>
-
-          <!-- Stock Name -->
-          <div class="bg-[#2c2d39] rounded-xl p-4 mb-4">
-            <p class="font-bold text-lg"></p>
-          </div>
-
-          <!-- Price Per Stock -->
-          <div class="mb-4">
-            <p class="text-[#8B8CA7] text-sm">Price Per Stock</p>
-            <input
-              type="number"
-              value=""
-              id="price"
-              readonly
-              class="bg-[#2c2d39] text-white rounded-xl p-3 mt-2 w-full"
-            />
-          </div>
-
-          <!-- Quantity -->
-          <div class="mb-2">
-            <p class="text-[#8B8CA7] text-sm">Quantity</p>
-            <input
-              id="transaction-form-quantity"
-              required
-              type="number"
-              placeholder="Enter quantity"
-              class="bg-[#2c2d39] text-white rounded-xl p-3 mt-2 w-full"
-            />
-            <p class="text-rose-500 text-left hidden">Error</p>
-          </div>
-
-          <div class="mr-auto">
-            <button
-              id="ticker-more-info-button"
-              class="rounded-xl bg-transparent text-sky-500 text-sm mb-2 hover:underline"
-            >
-              Click for more info
-            </button>
-          </div>
-
-          <!-- Buying Power and MAX Button -->
-          <div class="flex items-center justify-between mb-6">
-            <p id="buying-power-form" class="text-white font-bold text-sm">
-              Buying Power: $892.17
-            </p>
-            <button
-              type="button"
-              class="bg-[#3b3c4e] hover:bg-[#4a4b5e] text-white px-4 py-2 rounded-xl font-bold text-xs"
-              id="max-button"
-            >
-              MAX
-            </button>
-          </div>
-
-          <div class="hidden">
-            <input type="radio" id="buy-radio" name="action" value="buy" />
-            <input type="radio" id="sell-radio" name="action" value="sell" />
-          </div>
-
-          <!-- Submit Button -->
           <button
-            id="transaction-form-submit"
-            type="submit"
-            class="bg-emerald-500 hover:bg-emerald-600 transition rounded-2xl w-full py-4 font-bold text-lg"
+            type="button"
+            id="buy-button"
+            class="rounded-xl bg-emerald-500 hover:bg-emerald-500 w-full py-2 font-bold transition text-white"
           >
             Buy
           </button>
-        </form>
-      </div>
-    </div>
-    <div class="py-8 max-w-screen-xl mx-auto">
-      <div class="flex items-center justify-between">
-        <h1 class="text-3xl font-bold dark:text-white text-black">
-          Stock Market Simulator
-        </h1>
+          <button
+            type="button"
+            id="sell-button"
+            class="rounded-xl bg-[#2c2d39] hover:bg-rose-500 w-full py-2 font-bold transition text-white"
+          >
+            Sell
+          </button>
+        </div>
+
+        <div
+          class="rounded-xl p-4 mb-4 bg-white/20 dark:bg-[#2c2d39] text-black dark:text-white"
+        >
+          <p class="font-bold text-lg">
+            <!-- TICKER HERE -->
+          </p>
+        </div>
+
+        <div class="mb-4">
+          <p class="text-[#8B8CA7] text-sm">Price Per Stock</p>
+          <input
+            type="number"
+            value=""
+            id="price"
+            readonly
+            class="rounded-xl p-3 mt-2 w-full bg-white/20 dark:bg-[#2c2d39] text-black dark:text-white"
+          />
+        </div>
+
+        <div class="mb-2">
+          <p class="text-[#8B8CA7] text-sm">Quantity</p>
+          <input
+            id="transaction-form-quantity"
+            required
+            type="number"
+            placeholder="Enter quantity"
+            class="rounded-xl p-3 mt-2 w-full bg-white/20 dark:bg-[#2c2d39] text-black dark:text-white"
+          />
+          <p class="text-rose-500 text-left hidden">Error</p>
+        </div>
+
+        <div class="mr-auto">
+          <button
+            id="ticker-more-info-button"
+            class="rounded-xl bg-transparent text-sky-500 text-sm mb-2 hover:underline"
+          >
+            Click for more info
+          </button>
+        </div>
+
+        <div class="flex items-center justify-between mb-6">
+          <p id="buying-power-form" class="text-white font-bold text-sm">
+            Buying Power: $892.17
+          </p>
+          <button
+            type="button"
+            class="bg-[#3b3c4e] hover:bg-[#4a4b5e] text-white px-4 py-2 rounded-xl font-bold text-xs"
+            id="max-button"
+          >
+            MAX
+          </button>
+        </div>
+
+        <div class="hidden">
+          <input type="radio" id="buy-radio" name="action" value="buy" />
+          <input type="radio" id="sell-radio" name="action" value="sell" />
+        </div>
 
         <button
+          id="transaction-form-submit"
+          type="submit"
+          class="bg-emerald-500 hover:bg-emerald-600 transition rounded-2xl w-full py-4 font-bold text-lg text-white"
+        >
+          Buy
+        </button>
+      </form>
+    </div>
+
+    <nav
+      class="h-20 flex border-b justify-between font-medium bg-white dark:bg-black"
+    >
+      <a class="pl-6 flex items-center">
+        <span class="text-5xl font-semibold text-black dark:text-white"
+          >Stock Market Simulator</span
+        >
+      </a>
+
+      <div class="search-container relative my-auto">
+        <input
+          id="search-input"
+          class="default-input !w-[500px]"
+          placeholder="Search Stocks"
+        />
+
+        <div
+          id="search-results"
+          class="absolute bg-white dark:bg-[#1a1b1f] mt-2 rounded-md shadow-lg hidden transition-colors"
+          style="width: 500px"
+        ></div>
+      </div>
+
+      <div class="flex">
+        <button
+          id="logout-button"
+          class="text-black cursor-pointer border-l border-t-0 border-b-0 border-r-0 px-12 h-full rounded-none bg-white hover:bg-pink-400 transition-colors text-lg"
+        >
+          Logout
+        </button>
+        <button
           id="dark-mode-toggle"
-          class="p-2 rounded-full bg-gray-200 dark:bg-gray-700"
+          class="border-l cursor-pointer border-t-0 border-b-0 border-r-0 px-12 h-full rounded-none text-white hover:bg-pink-400 hover:text-black transition-colors text-lg"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-gray-800 dark:text-yellow-300"
+            class="size-6 text-black dark:text-white"
             fill="none"
             viewBox="0 0 24 24"
             stroke="currentColor"
@@ -224,11 +180,11 @@
           </svg>
         </button>
       </div>
+    </nav>
 
+    <div class="py-8 max-w-screen-xl mx-auto">
       <div class="block mt-4 mb-2">
-        <p class="dark:text-gray-400 text-gray-600 font-semibold text-sm">
-          Current Balance
-        </p>
+        <h2 class="text-white font-semibold text-2xl">Current Balance</h2>
       </div>
 
       <div class="block space-y-2">
@@ -283,7 +239,7 @@
           <div class="flex items-center">
             <button
               id="datePicker1"
-              class="flex items-center space-x-2 dark:bg-[#292B36] bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md text-gray-300 dark:hover:bg-[#2C2E39] transition"
+              class="flex items-center space-x-2 text-black dark:text-white dark:bg-black border border-white/20 bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md transition"
             >
               <svg
                 width="24px"
@@ -294,7 +250,7 @@
               >
                 <path
                   d="M3 9H21M7 3V5M17 3V5M6 12H8M11 12H13M16 12H18M6 15H8M11 15H13M16 15H18M6 18H8M11 18H13M16 18H18M6.2 21H17.8C18.9201 21 19.4802 21 19.908 20.782C20.2843 20.5903 20.5903 20.2843 20.782 19.908C21 19.4802 21 18.9201 21 17.8V8.2C21 7.07989 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V17.8C3 18.9201 3 19.4802 3.21799 19.908C3.40973 20.2843 3.71569 20.5903 4.09202 20.782C4.51984 21 5.07989 21 6.2 21Z"
-                  stroke="#9CA3AF"
+                  stroke="currentColor"
                   stroke-width="2"
                   stroke-linecap="round"
                 />
@@ -310,7 +266,7 @@
           <div class="flex items-center">
             <button
               id="datePicker2"
-              class="flex items-center space-x-2 dark:bg-[#292B36] bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md text-gray-300 dark:hover:bg-[#2C2E39] transition"
+              class="flex items-center space-x-2 text-black dark:text-white dark:bg-black border border-white/20 bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md transition"
             >
               <svg
                 width="24px"
@@ -321,7 +277,7 @@
               >
                 <path
                   d="M3 9H21M7 3V5M17 3V5M6 12H8M11 12H13M16 12H18M6 15H8M11 15H13M16 15H18M6 18H8M11 18H13M16 18H18M6.2 21H17.8C18.9201 21 19.4802 21 19.908 20.782C20.2843 20.5903 20.5903 20.2843 20.782 19.908C21 19.4802 21 18.9201 21 17.8V8.2C21 7.07989 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V17.8C3 18.9201 3 19.4802 3.21799 19.908C3.40973 20.2843 3.71569 20.5903 4.09202 20.782C4.51984 21 5.07989 21 6.2 21Z"
-                  stroke="#9CA3AF"
+                  stroke="currentColor"
                   stroke-width="2"
                   stroke-linecap="round"
                 />
@@ -335,7 +291,7 @@
 
           <input
             id="transaction-search-input"
-            class="absolute right-0 bg-neutral-200 dark:bg-[#2C2E39] p-2.5 rounded-lg w-[300px]"
+            class="default-input !absolute !right-0 !w-[350px] !bg-black"
             placeholder="Search for transactions..."
           />
         </div>
@@ -346,9 +302,7 @@
         >
           <table class="w-full text-left border-collapse">
             <thead>
-              <tr
-                class="bg-gray-100 dark:bg-[#292B36] text-black dark:text-gray-400"
-              >
+              <tr class="bg-gray-100 dark:bg-black text-black dark:text-white">
                 <th class="py-3 px-4">Date</th>
                 <th class="py-3 px-4">Symbol</th>
                 <th class="py-3 px-4">Type</th>
@@ -368,14 +322,16 @@
         <div class="pt-20 flex items-center justify-between">
           <button
             id="transactions-previous-button"
-            class="flex items-center space-x-2 dark:bg-[#292B36] bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md text-gray-300 dark:hover:bg-[#2C2E39] transition"
+            class="elevated-button !bg-black p-4"
           >
             Previous
           </button>
-          <p id="pagination-info" class="text-gray-300 px-4 py-2">1 of 10</p>
+          <p id="pagination-info" class="text-black dark:text-white pt-6">
+            1 of 10
+          </p>
           <button
             id="transactions-next-button"
-            class="flex items-center space-x-2 dark:bg-[#292B36] bg-neutral-200 hover:bg-neutral-300 px-4 py-2 rounded-md text-gray-300 dark:hover:bg-[#2C2E39] transition"
+            class="elevated-button !bg-black p-4"
           >
             Next
           </button>
