--- a/src/web-ui/src/sign-in/index.html
+++ b/src/web-ui/src/sign-in/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,111 +9,91 @@
       href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css"
     />
     <title>Sign In</title>
+
+    <script src="index.js" type="module" defer></script>
   </head>
-  <body
-    class="bg-neutral-100 dark:bg-[#1a1b23] min-h-screen flex items-center justify-center px-4"
-  >
-    <div
-      class="bg-white dark:bg-[#2c2d39] rounded-2xl shadow-lg p-8 w-full max-w-xl space-y-6"
-    >
-      <!-- Header with title and dark mode toggle -->
-      <div class="flex items-center justify-between">
-        <h1 class="text-3xl font-bold uppercase text-gray-900 dark:text-white">
-          Sign In
-        </h1>
-        <button
-          id="dark-mode-toggle"
-          class="p-2 rounded-full bg-gray-200 dark:bg-gray-700"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-gray-800 dark:text-yellow-300"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+
+  <body class="flex flex-1 h-screen">
+    <div class="flex size-full">
+      <main class="lg:w-3/4 w-full p-8 h-full flex flex-col">
+        <header class="flex items-center justify-between">
+          <div class="flex items-center justify-center">
+            <img
+              src="../money.png"
+              class="size-16 mr-3 object-cover hidden lg:block"
             />
-          </svg>
-        </button>
-      </div>
+            <h1 class="text-xl lg:text-2xl font-bold">
+              Stock Market Simulator
+            </h1>
+          </div>
 
-      <!-- Form Starts Here -->
-      <form id="signin-form" class="space-y-5">
-        <!-- Email -->
-        <div class="flex flex-col gap-1">
-          <label for="email" class="font-semibold text-gray-700 dark:text-white"
-            >Email Address</label
-          >
-          <input
-            id="email"
-            type="email"
-            placeholder="example@domain.com"
-            required
-            class="h-12 px-4 rounded-xl bg-neutral-100 dark:bg-gray-800 text-black dark:text-white outline-none focus:ring-2 focus:ring-blue-500"
-          />
-          <p class="text-rose-500 text-sm hidden">Invalid email</p>
-        </div>
+          <div class="flex items-center justify-center gap-x-2">
+            <a href="/sign-up/index.html" class="link-button p-3 !no-underline"
+              >Sign Up</a
+            >
 
-        <!-- Password -->
-        <div class="flex flex-col gap-1 relative">
-          <label
-            for="password"
-            class="font-semibold text-gray-700 dark:text-white"
-            >Password</label
-          >
-          <input
-            id="password"
-            type="password"
-            placeholder="********"
-            minlength="6"
-            required
-            class="h-12 px-4 pr-12 rounded-xl bg-neutral-100 dark:bg-gray-800 text-black dark:text-white outline-none focus:ring-2 focus:ring-blue-500"
-          />
-          <span
-            id="togglePassword"
-            class="absolute right-4 top-10 text-gray-500 cursor-pointer"
-            >👁</span
-          >
-          <p class="text-rose-500 text-sm hidden">Password too short</p>
-        </div>
+            <button
+              id="dark-mode-toggle"
+              class="p-2 rounded-full bg-transparent cursor-pointer"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-6 w-6 text-gray-800 dark:text-yellow-300"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+                />
+              </svg>
+            </button>
+          </div>
+        </header>
 
-        <!-- Forgot Password Link -->
-        <div class="text-right">
-          <a
-            href="/forgot-password/index.html"
-            class="text-blue-500 hover:text-blue-600 text-sm"
-          >
-            Forgot your password?
-          </a>
-        </div>
+        <section class="flex flex-1 items-center">
+          <form id="signin-form" class="w-full flex flex-col gap-y-8">
+            <div class="flex flex-col gap-y-4">
+              <label for="email" class="default-label !text-xl">Email</label>
+              <input
+                id="email"
+                name="email"
+                type="email"
+                class="default-input"
+                placeholder="Email Address"
+                required
+              />
+              <p class="text-rose-500 text-sm hidden">Invalid email</p>
+            </div>
 
-        <!-- Register Link -->
-        <div class="text-right">
-          <a
-            href="/sign-up/index.html"
-            class="text-blue-500 hover:text-blue-600 text-sm"
-          >
-            Don&apos;t have an account?
-          </a>
-        </div>
+            <div class="flex flex-col gap-y-4">
+              <label for="password" class="default-label !text-xl"
+                >Password</label
+              >
+              <input
+                id="password"
+                name="password"
+                type="password"
+                class="default-input"
+                placeholder="Password"
+                required
+              />
+              <p class="text-rose-500 text-sm hidden">Invalid password</p>
+            </div>
 
-        <!-- Submit Button -->
-        <button
-          type="submit"
-          id="submit"
-          class="w-full h-12 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-full transition disabled:bg-blue-400 disabled:cursor-not-allowed"
-        >
-          Sign In
-        </button>
-      </form>
+            <button type="submit" id="submit" class="elevated-button h-14">
+              <span class="font-semibold text-lg">Login</span>
+            </button>
+          </form>
+        </section>
+      </main>
+
+      <aside class="w-1/2 h-screen hidden lg:block">
+        <img src="../login-banner.png" alt="Illustration" class="size-full" />
+      </aside>
     </div>
-
-    <!-- Scripts -->
-    <script src="index.js" type="module"></script>
   </body>
 </html>
