feat: added Update user endpoint

--- a/src/web-ui/src/index.html
+++ b/src/web-ui/src/index.html
@@ -291,7 +291,7 @@
 
           <input
             id="transaction-search-input"
-            class="default-input !absolute !right-0 !w-[350px] !bg-black"
+            class="default-input !absolute !right-0 !w-[350px] dark:!bg-black"
             placeholder="Search for transactions..."
           />
         </div>
